fix: Don't force two taps on mobile <button> (fix #1904)

--- a/src/core/css/inc/mixins.scss
+++ b/src/core/css/inc/mixins.scss
@@ -219,8 +219,10 @@ $default-arrow-margin: 3px;
     font-weight: 400;
   }
 
-  &:hover {
-    background: $background-hover;
+  @media (pointer: fine) {
+    &:hover {
+      background: $background-hover;
+    }
   }
 
   &:active,
